Update FontAwesome, fix colors to match new branding, add variable font contrast pipeline

--- a/src/app/collection/settings/tab/rules/add-rule-form/blockly-form/blockly-editor/blockly-editor.component.scss
+++ b/src/app/collection/settings/tab/rules/add-rule-form/blockly-form/blockly-editor/blockly-editor.component.scss
@@ -8,9 +8,13 @@
 }
 
 ::ng-deep {
-
   .black-text {
     color: black;
+  }
+
+  .blocklyTreeRow {
+    line-height: 1.8rem;
+    height: 2rem;
   }
 
   .blocklyTreeLabel {
@@ -23,6 +27,11 @@
     &.text-primary {
       fill: $primary;
       color: $primary;
+    }
+
+    &.text-light {
+      fill: $light;
+      color: $light;
     }
 
     &.blocklyFontAwesome {
