--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -17,14 +17,14 @@ $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
 $black: #000 !default;
 
-$blue: #2c3e50 !default;
+$blue: #253746 !default;
 $indigo: #6610f2 !default;
 $purple: #6f42c1 !default;
 $pink: #e83e8c !default;
 $red: #e74c3c !default;
 $orange: #fd7e14 !default;
 $yellow: #f39c12 !default;
-$green: #18bc9c !default;
+$green: #00b388 !default;
 $teal: #20c997 !default;
 $cyan: #3498db !default;
 
